--- a/css/style.css
+++ b/css/style.css
@@ -1903,3 +1903,21 @@ footer {
     margin: 0.25rem 0;
   }
 }
+
+@media (max-width: 550px) {
+  .header-content .image .img-element {
+    max-width: 400px;
+  }
+
+  .records .container {
+    grid-template-columns: repeat(1, 1fr);
+    place-items: center;
+    padding-left: 1.7rem;
+  }
+}
+
+@media (max-width: 450px) {
+  .header-content .image .img-element {
+    max-width: 300px;
+  }
+}
